# ab-lab

./: .gitignore  README.md  ab_test_analysis.py  ab_test_data.csv  data_simulation.py  pyproject.toml  requirements.txt  setup.py
ablab/: __init__.py  bayes.py  guardrails.py  metrics.py  power.py  simulate.py  tests.py
ablab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
app/: app.py
tests/: test_inference.py  test_power.py  test_simulate.py
